--- a/assets/sass/variable/_layout.scss
+++ b/assets/sass/variable/_layout.scss
@@ -6,8 +6,9 @@ $padding-small: 10px;
 $padding-base: 20px;
 $padding-large: 40px;
 
-$navbar-height:100px;
+$navbar-height:150px;
 
-$title:2.8rem;
-$date:1.5rem;
-$content:2.25rem;
+$icon-base:50px;
+$icon-large: 130px;
+
+$logo:150px;
