--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ table {
   border-spacing: 0;
 }
 
-.event button {
+.home, .event button, .map {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -86,9 +86,26 @@ table {
           flex-direction: column;
 }
 
+.footer, .hotel__feature {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home, .stay__header {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 body {
   width: 100%;
-  max-width: 1980px;
+  max-width: 1920px;
   min-height: 100vh;
   margin: 0 auto;
   background-color: aquamarine;
@@ -100,15 +117,15 @@ a {
 
 .navbar {
   background-color: antiquewhite;
-  height: 100px;
-  width: 80%;
+  height: 150px;
+  width: 84.167%;
   margin: 0 auto;
-  font-size: 1.875rem;
+  font-size: 1.125rem;
 }
 
 .navbar__logo {
-  margin-left: 20px;
-  padding: 40px;
+  width: 150px;
+  height: 150px;
   background-color: rebeccapurple;
 }
 
@@ -139,131 +156,77 @@ a {
 }
 
 .navbar__outside-link img {
-  height: 40px;
-  width: 40px;
-}
-
-#carouselExampleControls {
-  height: 80vh;
-  max-height: 80vh;
-  width: 100%;
-}
-
-.carousel-inner {
-  width: 100%;
-  height: 100%;
-}
-
-.carousel-item img {
-  width: 100%;
-  height: 100%;
+  height: 50px;
+  width: 50px;
 }
 
 .header {
-  background-image: url(../picture/history.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   width: 100%;
   height: 80vh;
-  position: relative;
-  overflow: hidden;
-}
-
-.header__history {
-  position: absolute;
-  bottom: -120px;
-  left: -50px;
-  background-color: beige;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  width: 500px;
-  height: 200px;
-  border-radius: 40px;
-}
-
-.header__history__title {
-  margin: 20px;
-  font-size: 50px;
 }
 
 .main {
   background-color: brown;
-  width: 80%;
+  width: 84.167%;
   margin: 3rem auto;
 }
 
 .footer {
   background-color: blanchedalmond;
   width: 100%;
-  height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  height: 300px;
   position: relative;
 }
 
 .footer__logo div {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   background-color: aqua;
 }
 
 .footer__logo h3 {
-  margin-top: 2rem;
-  font-size: 2.5rem;
+  margin-top: 20px;
+  font-size: 1.875rem;
   text-align: center;
 }
 
 .footer__info__contact-e {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
 }
 
 .footer__info__contact-c {
-  font-size: 2.25rem;
+  font-size: 1.375rem;
   margin-top: 10px;
 }
 
 .footer__info__address {
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   margin: 20px 0;
 }
 
-.footer__info__email {
-  font-size: 1.5rem;
-}
-
 .footer__info__phone {
-  font-size: 1.5rem;
   margin-top: 10px;
 }
 
 .footer__visits-e {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
 }
 
 .footer__visits-c {
   margin: 10px 0;
-  font-size: 1.5rem;
-}
-
-.footer__visits p {
-  font-size: 1.5rem;
+  font-size: 1.375rem;
 }
 
 .footer__copyright {
-  font-size: 1.5rem;
+  font-size: 0.875rem;
   position: absolute;
   bottom: 0;
+}
+
+.home {
+  width: 100%;
+  height: 80vh;
+  background-image: url(../image/cover.jpg);
 }
 
 .news {
@@ -271,7 +234,7 @@ a {
 }
 
 .news__title {
-  font-size: 2.8rem;
+  font-size: 1.5rem;
   padding: 20px 0;
 }
 
@@ -282,7 +245,7 @@ a {
 }
 
 .news__icon img {
-  width: 12%;
+  width: 130px;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
 }
@@ -298,12 +261,12 @@ a {
 }
 
 .news__content li p {
-  font-size: 2.25rem;
+  font-size: 1.125rem;
 }
 
 .news__date {
   display: block;
-  font-size: 1.5rem;
+  font-size: 0.875rem;
   margin: 10px 0;
 }
 
@@ -313,7 +276,7 @@ a {
 }
 
 .event__title {
-  font-size: 2.8rem;
+  font-size: 1.5rem;
   padding: 20px 0;
 }
 
@@ -334,11 +297,11 @@ a {
 }
 
 .event__info h3 {
-  font-size: 1.5rem;
+  font-size: 1.125rem;
 }
 
 .event__info a {
-  font-size: 1.25rem;
+  font-size: 0.875rem;
 }
 
 .event button {
@@ -350,44 +313,28 @@ a {
 
 .map {
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: goldenrod;
 }
 
 .map__deer {
-  height: 400px;
+  display: inline-block;
+  width: 25.68%;
 }
 
 .map__location {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   background-color: #000000;
-  width: 800px;
+  width: 74.26%;
   height: 400px;
   border: 1px solid blue;
-  border-radius: 10px;
-}
-
-.history {
-  background-color: brown;
-  width: 80%;
-  margin: 3rem auto;
+  border-radius: 40px;
 }
 
 .history__items {
-  font-size: 1.5rem;
   line-height: 1.4;
   margin-bottom: 20px;
 }
 
 .stay__header {
   background-image: url(../picture/hotel-header.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   width: 100%;
   height: 80vh;
   position: relative;
@@ -396,33 +343,21 @@ a {
 
 .stay__header__title {
   position: absolute;
-  bottom: -120px;
-  left: -50px;
+  bottom: -10%;
+  left: -5%;
   background-color: beige;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  width: 500px;
-  height: 200px;
+  width: 30.21%;
+  height: 152px;
   border-radius: 40px;
 }
 
 .stay__header__title h2 {
-  margin: 20px;
-  font-size: 50px;
+  text-align: end;
+  padding: 40px 20px;
+  font-size: 1.5rem;
 }
 
 .hotel {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   position: relative;
 }
 
@@ -433,68 +368,73 @@ a {
 
 .hotel__title {
   margin-top: 20px;
-  font-size: 2.8125em;
+  font-size: 1.375rem;
 }
 
 .hotel__introduce {
   margin-top: 20px;
-  font-size: 1.5em;
 }
 
 .hotel__contact-container {
   margin-top: 40px;
   margin-bottom: 40px;
-  font-size: 1.5em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
-.hotel__contact-container > p {
+.hotel__contact-container p {
+  display: inline-block;
   margin: 0 20px;
-  margin-right: 20rem;
 }
 
 .hotel__feature {
   margin-top: 20px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   background-color: blanchedalmond;
   width: 80%;
-  height: 500px;
+  height: 250px;
   border-radius: 50px;
-}
-
-.hotel__feature h3 {
-  position: absolute;
-  font-size: 2.8125em;
-  top: 2rem;
-  left: 7%;
 }
 
 .hotel__feature__items {
   position: relative;
-  font-size: 2rem;
+  font-size: 1.125rem;
 }
 
 .hotel__feature__items h3 {
   position: absolute;
-  font-size: 2.8125em;
-  top: -10rem;
-  left: 0;
+  top: -40px;
+  font-size: 1.375rem;
 }
 
 .hotel__link {
-  margin: 40px 40px;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-  font-size: 2rem;
+  display: block;
+  text-align: end;
+  margin: 40px 10%;
+}
+
+.about-us {
+  background-image: url(../picture/history.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 80vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.about-us__container {
+  position: absolute;
+  bottom: -10%;
+  left: -5%;
+  background-color: beige;
+  width: 30.21%;
+  height: 152px;
+  border-radius: 40px;
+}
+
+.about-us__title {
+  text-align: end;
+  padding: 40px 20px;
+  font-size: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
