--- a/assets/sass/component/_hotel.scss
+++ b/assets/sass/component/_hotel.scss
@@ -1,6 +1,4 @@
 .hotel{
-	display: flex;
-	flex-direction: column;
 	position: relative;
 &__image{
 	width: 100%;
@@ -8,52 +6,41 @@
 }
 &__title{
 	margin-top: $margin-base;
-	font-size :2.8125em; ;
+	font-size :$font-title-footer-sub; ;
 }
 &__introduce{
 	margin-top: $margin-base;
-	font-size :1.5em;
 }
 &__contact-container{
+
 	margin-top:$margin-large;
 	margin-bottom:$margin-large;
-	font-size :1.5em;
-	display: flex;
-	>p{
+	p{
+		display: inline-block;
 		margin: 0 $margin-base;
-		margin-right: 20rem;
 	}
 }
 &__feature{
+	@extend %flex-around;
 	margin-top: $margin-base;
 	margin: 0 auto;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
 	background-color: blanchedalmond;
 	width: 80%;
-	height: 500px;
+	height: 250px;
 	border-radius: 50px;
-	h3{
-		position: absolute;
-		font-size: 2.8125em;
-		top:2rem;
-		left: 7%;
-	}
 &__items{
 	position: relative;
-	font-size: 2rem;
+	font-size: $font-navbar;
 	h3{
 		position: absolute;
-		font-size: 2.8125em;
-		top:-10rem;
-		left: 0;
+		top:-$margin-large;
+		font-size:$font-title-footer-sub ;
 	}
 }
 }
 &__link{
-	margin: $margin-large $margin-large;
-	align-self:flex-end;
-	font-size: 2rem;
+	display: block;
+	text-align: end;
+	margin: $margin-large 10%;
 }
 }
