--- a/assets/sass/component/_map.scss
+++ b/assets/sass/component/_map.scss
@@ -1,16 +1,15 @@
 .map{
+	@extend %flex-center;
 	margin-top: $margin-base;
-	display: flex;
-	background-color: goldenrod;
 	&__deer{
-		height: 400px;
+		display: inline-block;
+		width: 25.68%;
 	}
 &__location{
-	flex:1;
 background-color: #000000;
-width: 800px;
+width: 74.26%;
 height: 400px;
 border: 1px solid blue;
-border-radius: 10px;
+border-radius: 40px;
 }
 }
