--- a/assets/sass/component/_news.scss
+++ b/assets/sass/component/_news.scss
@@ -1,7 +1,7 @@
 .news{
 	position: relative;
 	&__title{
-		font-size:$title;
+		font-size:$font-title;
 		padding: $padding-base 0;
 	}
 	&__icon{
@@ -9,7 +9,7 @@
 		top:0;
 		left: -55px;
 		img{
-			width: 12%;
+			width: $icon-large;
 			transform: rotate(90deg);
 		}
 	}
@@ -20,13 +20,13 @@
 			margin: $margin-base 0;
 			padding-bottom: $padding-base;
 			p{
-				font-size: $content;
+				font-size: $font-navbar;
 			}
 		}
 	}
 	&__date{
 		display: block;
-		font-size: $date;
+		font-size: $font-date;
 		margin:$margin-small 0;
 	}
 }
