--- a/assets/sass/component/_stay.scss
+++ b/assets/sass/component/_stay.scss
@@ -1,25 +1,22 @@
 .stay__header{
 	background-image: url(../picture/hotel-header.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  @extend %background-img-position;
   width: 100%;
   height: 80vh;
   position: relative;
 	overflow: hidden;
 	&__title{
 		position: absolute;
-		bottom: -120px;
-		left:-50px;
+		bottom: -10%;
+    left: -5%;
     background-color: beige;
-    display: flex;
-    justify-content: flex-end;
-    width: 500px;
-    height: 200px;
-    border-radius: 40px;
+    width: 30.21%;
+    height: 152px;
+    border-radius: $margin-large;
 		h2{
-			margin: 20px;
-			font-size: 50px;
+      text-align: end;
+      padding: $margin-large $padding-base;
+      font-size:$font-title;
 		}
 	}
 }
