--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,57 +1,48 @@
 .footer{
+	@extend %flex-around;
 	background-color: blanchedalmond;
 	width: 100%;
-	height: 400px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
+	height: 300px;
 	position: relative;
 	&__logo{
 		div{
-			width: 200px;
-			height: 200px;
+			width: 150px;
+			height: 150px;
 			background-color: aqua;
 		}
 		h3{
-			margin-top: 2rem;
-			font-size: 2.5rem;
+			margin-top: $margin-base;
+			font-size: $font-title-footer;
 			text-align: center;
 		}
 	}
 	&__info{
-&__contact-e{
-	font-size: 1.25rem;
-}
-&__contact-c{
-	font-size: 2.25rem;
+		&__contact-e{
+	font-size: $font-navbar;
+		}
+		&__contact-c{
+	font-size: $font-title-footer-sub;
 	margin-top: $margin-small;
-}
-&__address{
-	font-size: 1.5rem;
+		}
+		&__address{
+			font-size: $font-navbar;
 	margin: $margin-base 0;
-}
-&__email{
-	font-size: 1.5rem;
-}
+		}
 &__phone{
-	font-size: 1.5rem;
 	margin-top: $margin-small;
-}
+		}
 	}
 	&__visits{
 		&-e{
-			font-size: 1.25rem;
+			font-size: $font-navbar;
 		}
 		&-c{
 			margin: $margin-small 0;
-			font-size: 1.5rem;
-		}
-		p{
-			font-size: 1.5rem;
+			font-size: $font-title-footer-sub;
 		}
 	}
 	&__copyright{
-		font-size: 1.5rem;
+		font-size: $font-date;
 		position: absolute;
 		bottom:0;
 	}
