--- a/assets/sass/mixin/_flex-box.scss
+++ b/assets/sass/mixin/_flex-box.scss
@@ -14,3 +14,9 @@
 	display: flex;
 	flex-direction: column;
 }
+
+%flex-around{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
