--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -21,6 +21,6 @@
 @import 'component/home/map';
 @import 'component/home/news';
 @import 'component/history/about';
-@import 'component/history/about';
+@import 'component/history/history';
 @import 'component/stay/stay';
 @import 'component/stay/hotel';
