--- a/assets/sass/variable/_color.scss
+++ b/assets/sass/variable/_color.scss
@@ -1,2 +1,8 @@
 $color-white:#ffffff;
 $color-black:#000000;
+$color-accent: #3DA3FF;
+$color-accent-dark:#123C62;
+$color-accent-light:#FFB72A;
+
+$color-gray:#7C7C7C;
+$color-button-gray:#BEBEBE;
