--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,16 +76,6 @@ table {
           align-items: center;
 }
 
-.event__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 .footer, .hotel__feature {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -97,7 +87,7 @@ table {
           align-items: center;
 }
 
-.home, .stay__header {
+.home, .about-us, .stay__header {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -108,7 +98,6 @@ body {
   max-width: 1920px;
   min-height: 100vh;
   margin: 0 auto;
-  background-color: aquamarine;
 }
 
 a {
@@ -116,7 +105,6 @@ a {
 }
 
 .navbar {
-  background-color: antiquewhite;
   height: 150px;
   width: 84.167%;
   margin: 0 auto;
@@ -126,7 +114,10 @@ a {
 .navbar__logo {
   width: 150px;
   height: 150px;
-  background-color: rebeccapurple;
+}
+
+.navbar__logo img {
+  width: 100%;
 }
 
 .navbar__link {
@@ -143,6 +134,7 @@ a {
 
 .navbar__link a {
   margin-left: 40px;
+  color: #123C62;
 }
 
 .navbar__outside-link {
@@ -166,28 +158,28 @@ a {
 }
 
 .main {
-  background-color: brown;
   width: 84.167%;
   margin: 3rem auto;
 }
 
 .footer {
-  background-color: blanchedalmond;
+  background-color: #3DA3FF;
   width: 100%;
   height: 300px;
   position: relative;
-}
-
-.footer__logo div {
-  width: 150px;
-  height: 150px;
-  background-color: aqua;
+  color: #ffffff;
 }
 
 .footer__logo h3 {
   margin-top: 20px;
   font-size: 1.875rem;
   text-align: center;
+}
+
+.footer__info img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
 }
 
 .footer__info__contact-e {
@@ -217,42 +209,61 @@ a {
   font-size: 1.375rem;
 }
 
+.footer__visits__update {
+  margin-bottom: 50px;
+}
+
+.footer__visits img {
+  margin-right: 20px;
+  width: 30px;
+  height: 30px;
+}
+
 .footer__copyright {
   font-size: 0.875rem;
   position: absolute;
   bottom: 0;
+  color: #ffffff;
 }
 
 .home {
   width: 100%;
   height: 80vh;
-  background-image: url(../image/cover.jpg);
+  background-image: url(../public/picture/header-cover/home.png);
+  color: #ffffff;
 }
 
 .event {
-  background-color: yellowgreen;
   position: relative;
 }
 
+.event__icon {
+  position: absolute;
+  width: 13.36%;
+}
+
+.event__icon img {
+  width: 100%;
+}
+
 .event__title {
+  width: 86.36%;
+  margin-left: 13.36%;
   font-size: 1.5rem;
   padding: 20px 0;
+  color: #3DA3FF;
 }
 
 .event__item {
-  background-color: blueviolet;
   width: 26%;
 }
 
-.event__item div {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  width: 250px;
-  height: 250px;
-  background-color: #000000;
-  border-radius: 50%;
-  margin-bottom: 40px;
+.event__item img {
+  width: 100%;
+}
+
+.event__info {
+  margin: 40px 0;
 }
 
 .event__info h3 {
@@ -260,6 +271,8 @@ a {
 }
 
 .event__info a {
+  text-align: end;
+  color: #7C7C7C;
   font-size: 0.875rem;
 }
 
@@ -268,6 +281,19 @@ a {
   height: 40px;
   border: none;
   border-radius: 50%;
+  position: absolute;
+  background-color: #BEBEBE;
+  color: #ffffff;
+}
+
+.event__button-1 {
+  top: 21vh;
+  left: -4.545%;
+}
+
+.event__button-2 {
+  top: 21vh;
+  right: -4.545%;
 }
 
 .map {
@@ -275,37 +301,56 @@ a {
 }
 
 .map__deer {
-  display: inline-block;
-  width: 25.68%;
+  width: 37.73%;
 }
 
 .map__location {
-  background-color: #000000;
-  width: 74.26%;
-  height: 400px;
-  border: 1px solid blue;
+  width: 62.72%;
+  border: 1px solid #3DA3FF;
   border-radius: 40px;
+  margin-left: 10px;
+}
+
+.map__location img {
+  width: 100%;
 }
 
 .news {
   position: relative;
+  margin-left: 15%;
+  width: 50%;
 }
 
 .news__title {
   font-size: 1.5rem;
   padding: 20px 0;
+  color: #3DA3FF;
 }
 
 .news__icon {
   position: absolute;
+  width: 27.27%;
   top: 0;
-  left: -55px;
+  left: -27.27%;
 }
 
 .news__icon img {
-  width: 130px;
+  width: 100%;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+}
+
+.news__figure {
+  position: absolute;
+  width: 65.45%;
+  bottom: 0;
+  right: -65.45%;
+}
+
+.news__figure img {
+  width: 100%;
+  -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
 }
 
 .news__content {
@@ -313,90 +358,94 @@ a {
 }
 
 .news__content li {
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #123C62;
   margin: 20px 0;
   padding-bottom: 20px;
 }
 
 .news__content li p {
   font-size: 1.125rem;
+  color: #123C62;
 }
 
 .news__date {
   display: block;
   font-size: 0.875rem;
   margin: 10px 0;
+  color: #123C62;
 }
 
 .about-us {
-  background-image: url(../picture/history.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-image: url(../public/picture/header-cover/about.png);
   width: 100%;
   height: 80vh;
   position: relative;
   overflow: hidden;
 }
 
-.about-us__container {
+.about-us img {
   position: absolute;
-  bottom: -10%;
-  left: -5%;
-  background-color: beige;
-  width: 30.21%;
-  height: 152px;
-  border-radius: 40px;
-}
-
-.about-us__title {
-  text-align: end;
-  padding: 40px 20px;
-  font-size: 1.5rem;
-}
-
-.about-us {
-  background-image: url(../picture/history.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 80vh;
-  position: relative;
-  overflow: hidden;
+  width: 130px;
+  height: 130px;
+  left: 7.8125%;
+  bottom: -5%;
+  z-index: 10;
 }
 
 .about-us__container {
   position: absolute;
   bottom: -10%;
   left: -5%;
-  background-color: beige;
+  background-color: #ffffff;
   width: 30.21%;
-  height: 152px;
+  height: 150px;
   border-radius: 40px;
 }
 
 .about-us__title {
   text-align: end;
+  color: #123C62;
   padding: 40px 20px;
   font-size: 1.5rem;
+}
+
+.history__items {
+  line-height: 1.4;
+  margin-bottom: 20px;
+  color: #123C62;
+}
+
+.history img {
+  width: 42%;
+  margin-left: 58%;
+  -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
 }
 
 .stay__header {
-  background-image: url(../picture/hotel-header.jpg);
+  background-image: url(../public/picture/header-cover/stay.png);
   width: 100%;
   height: 80vh;
   position: relative;
   overflow: hidden;
+}
+
+.stay__header img {
+  position: absolute;
+  width: 130px;
+  height: 130px;
+  left: 7.8125%;
+  bottom: -5%;
+  z-index: 10;
 }
 
 .stay__header__title {
   position: absolute;
   bottom: -10%;
   left: -5%;
-  background-color: beige;
+  background-color: #ffffff;
   width: 30.21%;
-  height: 152px;
+  height: 150px;
   border-radius: 40px;
 }
 
@@ -408,6 +457,7 @@ a {
 
 .hotel {
   position: relative;
+  color: #123C62;
 }
 
 .hotel__image {
@@ -429,18 +479,24 @@ a {
   margin-bottom: 40px;
 }
 
-.hotel__contact-container p {
+.hotel__contact-container li {
   display: inline-block;
-  margin: 0 20px;
+  margin-right: 20%;
+}
+
+.hotel__contact-container li img {
+  width: 50px;
+  height: 50px;
 }
 
 .hotel__feature {
   margin-top: 20px;
   margin: 0 auto;
-  background-color: blanchedalmond;
+  background-color: #FFB72A;
   width: 80%;
   height: 250px;
   border-radius: 50px;
+  color: #ffffff;
 }
 
 .hotel__feature__items {
@@ -448,7 +504,13 @@ a {
   font-size: 1.125rem;
 }
 
-.hotel__feature__items h3 {
+.hotel__feature__items img {
+  position: absolute;
+  top: -40px;
+  left: -40px;
+}
+
+.hotel__feature__items-title {
   position: absolute;
   top: -40px;
   font-size: 1.375rem;
@@ -458,5 +520,6 @@ a {
   display: block;
   text-align: end;
   margin: 40px 10%;
+  color: #7C7C7C;
 }
 /*# sourceMappingURL=style.css.map */
