--- a/assets/sass/component/history/_about.scss
+++ b/assets/sass/component/history/_about.scss
@@ -1,23 +1,30 @@
 .about-us{
-	background-image: url(../picture/history.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+	background-image: url(../public/picture/header-cover/about.png);
+  @extend %background-img-position;
   width: 100%;
   height: 80vh;
   position: relative;
-	overflow: hidden;
+  overflow: hidden;
+  img{
+    position: absolute;
+    width: $icon-large;
+    height: $icon-large;
+    left: 7.8125%;
+    bottom: -5%;
+    z-index: 10;
+  }
 	&__container{
 		position: absolute;
 		bottom: -10%;
     left: -5%;
-    background-color: beige;
+    background-color:$color-white;
     width: 30.21%;
-    height: 152px;
+    height: $navbar-height;
     border-radius: $margin-large;
 	}
 	&__title{
     text-align: end;
+    color:$color-accent-dark;
 		padding: $margin-large $padding-base;
 		font-size:$font-title;
 	}
