--- a/assets/sass/component/history/_history.scss
+++ b/assets/sass/component/history/_history.scss
@@ -2,5 +2,11 @@
 	&__items{
 		line-height: 1.4;
 		margin-bottom:$margin-base ;
+		color:$color-accent-dark;
+	}
+	img{
+		width: 42%;
+		margin-left:58% ;
+		transform: scaleX(-1);
 	}
 }
