--- a/assets/sass/component/home/_event.scss
+++ b/assets/sass/component/home/_event.scss
@@ -1,32 +1,38 @@
 .event{
-background-color: yellowgreen;
 position: relative;
+&__icon{
+	position: absolute;
+	width: 13.36%;
+	img{
+		width: 100%;
+	}
+}
 &__title{
+	width: 86.36%;
+	margin-left: 13.36%;
 	font-size:$font-title;
 	padding: $padding-base 0;
+	color:$color-accent;
 }
 &__container{
 	@extend %flex-between;
 }
 &__item{
-	@extend %flex-column;
-	background-color: blueviolet;
 	width: 26%;
-	div{
-		align-self: center;
-		width: 250px;
-		height: 250px;
-		background-color: #000000;
-		border-radius: 50%;
-		margin-bottom:$margin-large;
+	img{
+		width: 100%;
 	}
 }
 &__info{
-@extend %flex-between;
+	@extend %flex-between;
+	margin:$margin-large 0;
 	h3{
 		font-size: $font-navbar;
+
 	}
 	a{
+		text-align: end;
+		color:$color-gray;
 		font-size:$font-date;
 	}
 }
@@ -36,5 +42,16 @@ button{
 	height: $padding-large;
 	border: none;
 	border-radius: 50%;
+	position: absolute;
+	background-color: $color-button-gray;
+	color:$color-white;
+}
+&__button-1{
+	top:21vh;
+	left:-4.545%;
+}
+&__button-2{
+	top:21vh;
+	right: -4.545%;
 }
 }
