--- a/assets/sass/component/home/_home.scss
+++ b/assets/sass/component/home/_home.scss
@@ -1,7 +1,8 @@
 .home{
 	width: 100%;
 	height: 80vh;
-  background-image: url(../image/cover.jpg);
+  background-image: url(../public/picture/header-cover/home.png);
 	@extend %background-img-position;
 	@extend %flex-center;
+	color:$color-white;
 }
