--- a/assets/sass/component/home/_map.scss
+++ b/assets/sass/component/home/_map.scss
@@ -2,14 +2,16 @@
 	@extend %flex-center;
 	margin-top: $margin-base;
 	&__deer{
-		display: inline-block;
-		width: 25.68%;
+		width: 37.73%;
+
 	}
 &__location{
-background-color: #000000;
-width: 74.26%;
-height: 400px;
-border: 1px solid blue;
+width: 62.72%;
+border: 1px solid $color-accent;
 border-radius: 40px;
+margin-left:$margin-small;
+img{
+	width: 100%;
+}
 }
 }
