--- a/assets/sass/component/stay/_stay.scss
+++ b/assets/sass/component/stay/_stay.scss
@@ -1,17 +1,25 @@
 .stay__header{
-	background-image: url(../picture/hotel-header.jpg);
+	background-image: url(../public/picture/header-cover/stay.png);
   @extend %background-img-position;
   width: 100%;
   height: 80vh;
   position: relative;
 	overflow: hidden;
+  img{
+    position: absolute;
+    width: $icon-large;
+    height: $icon-large;
+    left: 7.8125%;
+    bottom: -5%;
+    z-index: 10;
+  }
 	&__title{
 		position: absolute;
 		bottom: -10%;
     left: -5%;
-    background-color: beige;
+    background-color: $color-white;
     width: 30.21%;
-    height: 152px;
+    height: $navbar-height;
     border-radius: $margin-large;
 		h2{
       text-align: end;
