--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,6 +1,5 @@
 .navbar{
 	@extend %flex-between;
-	background-color: antiquewhite;
 	height: $navbar-height;
 	width: 84.167%;
 	margin: 0 auto;
@@ -8,7 +7,9 @@
 	&__logo{
 	width: $logo;
 	height: $logo;
-		background-color: rebeccapurple;
+	img{
+		width: 100%;
+	}
 	}
 	&__link{
 		flex:1;
@@ -16,6 +17,7 @@
 		justify-content: flex-end;
 		a{
 			margin-left: $margin-large;
+			color:$color-accent-dark;
 		}
 	}
 	&__outside-link{
