--- a/assets/sass/component/history/_about.scss
+++ b/assets/sass/component/history/_about.scss
@@ -5,6 +5,7 @@
   height: 80vh;
   position: relative;
   overflow: hidden;
+  margin-bottom: $margin-large;
   img{
     position: absolute;
     width: $icon-large;
