--- a/assets/sass/variable/_font-size.scss
+++ b/assets/sass/variable/_font-size.scss
@@ -1,4 +1,5 @@
 $font-navbar:1.125rem;
+$font-big-title:3.125rem;
 $font-title:1.5rem;
 $font-title-footer:1.875rem;
 $font-title-footer-sub:1.375rem;
