--- a/assets/sass/variable/_layout.scss
+++ b/assets/sass/variable/_layout.scss
@@ -1,15 +1,21 @@
 $margin-small:10px;
 $margin-base: 20px;
 $margin-large: 40px;
+$margin-big: 50px;
 
 $padding-small: 10px;
 $padding-base: 20px;
 $padding-large: 40px;
 
-$navbar-height:150px;
+$navbar-height:100px;
+$footer-height:300px;
 
 $icon-base:50px;
-$icon-small:30px;
+$icon-small:25px;
 $icon-large: 130px;
 
-$logo:150px;
+$logo:100px;
+
+$border-radius-base:40px;
+$border-radius-large:50px;
+$border-radius-circle:50%;
