--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -98,6 +99,7 @@ body {
   max-width: 1920px;
   min-height: 100vh;
   margin: 0 auto;
+  font-family: 'Noto Sans TC', sans-serif;
 }
 
 a {
@@ -105,15 +107,15 @@ a {
 }
 
 .navbar {
-  height: 150px;
+  height: 100px;
   width: 84.167%;
   margin: 0 auto;
   font-size: 1.125rem;
 }
 
 .navbar__logo {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 }
 
 .navbar__logo img {
@@ -159,7 +161,7 @@ a {
 
 .main {
   width: 84.167%;
-  margin: 3rem auto;
+  margin: 10vh auto;
 }
 
 .footer {
@@ -176,12 +178,6 @@ a {
   text-align: center;
 }
 
-.footer__info img {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-}
-
 .footer__info__contact-e {
   font-size: 1.125rem;
 }
@@ -196,8 +192,26 @@ a {
   margin: 20px 0;
 }
 
+.footer__info__email::before {
+  display: inline-block;
+  content: '';
+  margin-right: 10px;
+  background-image: url(../public/icon/email.png);
+  width: 25px;
+  height: 25px;
+}
+
 .footer__info__phone {
   margin-top: 10px;
+}
+
+.footer__info__phone::before {
+  display: inline-block;
+  content: '';
+  margin-right: 10px;
+  background-image: url(../public/icon/phone.png);
+  width: 25px;
+  height: 25px;
 }
 
 .footer__visits-e {
@@ -215,8 +229,8 @@ a {
 
 .footer__visits img {
   margin-right: 20px;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
 }
 
 .footer__copyright {
@@ -233,13 +247,17 @@ a {
   color: #ffffff;
 }
 
+.home__title {
+  font-size: 3.125rem;
+}
+
 .event {
   position: relative;
 }
 
 .event__icon {
   position: absolute;
-  width: 13.36%;
+  width: 5.946%;
 }
 
 .event__icon img {
@@ -247,8 +265,8 @@ a {
 }
 
 .event__title {
-  width: 86.36%;
-  margin-left: 13.36%;
+  width: 94.05%;
+  margin-left: 5.946%;
   font-size: 1.5rem;
   padding: 20px 0;
   color: #3DA3FF;
@@ -284,16 +302,17 @@ a {
   position: absolute;
   background-color: #BEBEBE;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .event__button-1 {
   top: 21vh;
-  left: -4.545%;
+  left: -5.946%;
 }
 
 .event__button-2 {
   top: 21vh;
-  right: -4.545%;
+  right: -5.946%;
 }
 
 .map {
@@ -317,8 +336,8 @@ a {
 
 .news {
   position: relative;
-  margin-left: 15%;
-  width: 50%;
+  margin-left: 9.025%;
+  width: 65.975%;
 }
 
 .news__title {
@@ -329,9 +348,9 @@ a {
 
 .news__icon {
   position: absolute;
-  width: 27.27%;
+  width: 9.025%;
   top: 0;
-  left: -27.27%;
+  left: -9.025%;
 }
 
 .news__icon img {
@@ -342,9 +361,9 @@ a {
 
 .news__figure {
   position: absolute;
-  width: 65.45%;
+  width: 25%;
   bottom: 0;
-  right: -65.45%;
+  right: -25%;
 }
 
 .news__figure img {
@@ -381,6 +400,7 @@ a {
   height: 80vh;
   position: relative;
   overflow: hidden;
+  margin-bottom: 40px;
 }
 
 .about-us img {
@@ -398,7 +418,7 @@ a {
   left: -5%;
   background-color: #ffffff;
   width: 30.21%;
-  height: 150px;
+  height: 100px;
   border-radius: 40px;
 }
 
@@ -445,7 +465,7 @@ a {
   left: -5%;
   background-color: #ffffff;
   width: 30.21%;
-  height: 150px;
+  height: 100px;
   border-radius: 40px;
 }
 
