--- a/assets/sass/variable/_layout.scss
+++ b/assets/sass/variable/_layout.scss
@@ -8,6 +8,7 @@ $padding-base: 20px;
 $padding-large: 40px;
 
 $navbar-height:100px;
+$header-title:150px;
 $footer-height:300px;
 
 $icon-base:50px;
