--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ table {
           align-items: center;
 }
 
-.home, .about-us, .stay__header {
+.home, .about-us, .stay {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -400,25 +400,15 @@ a {
   height: 80vh;
   position: relative;
   overflow: hidden;
-  margin-bottom: 40px;
-}
-
-.about-us img {
-  position: absolute;
-  width: 130px;
-  height: 130px;
-  left: 7.8125%;
-  bottom: -5%;
-  z-index: 10;
 }
 
 .about-us__container {
   position: absolute;
-  bottom: -10%;
+  bottom: -5%;
   left: -5%;
   background-color: #ffffff;
   width: 30.21%;
-  height: 100px;
+  height: 150px;
   border-radius: 40px;
 }
 
@@ -427,6 +417,16 @@ a {
   color: #123C62;
   padding: 40px 20px;
   font-size: 1.5rem;
+}
+
+.about-us__title::before {
+  display: inline-block;
+  content: '';
+  width: 50px;
+  height: 50px;
+  background-image: url(../public/icon/shell-3.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .history__items {
@@ -442,7 +442,7 @@ a {
           transform: scaleX(-1);
 }
 
-.stay__header {
+.stay {
   background-image: url(../public/picture/header-cover/stay.png);
   width: 100%;
   height: 80vh;
@@ -450,29 +450,31 @@ a {
   overflow: hidden;
 }
 
-.stay__header img {
+.stay__container {
   position: absolute;
-  width: 130px;
-  height: 130px;
-  left: 7.8125%;
   bottom: -5%;
-  z-index: 10;
-}
-
-.stay__header__title {
-  position: absolute;
-  bottom: -10%;
   left: -5%;
   background-color: #ffffff;
   width: 30.21%;
-  height: 100px;
+  height: 150px;
   border-radius: 40px;
 }
 
-.stay__header__title h2 {
+.stay__title {
   text-align: end;
+  color: #123C62;
   padding: 40px 20px;
   font-size: 1.5rem;
+}
+
+.stay__title::before {
+  display: inline-block;
+  content: '';
+  width: 50px;
+  height: 50px;
+  background-image: url(../public/icon/shell-4.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .hotel {
@@ -494,19 +496,38 @@ a {
   margin-top: 20px;
 }
 
-.hotel__contact-container {
-  margin-top: 40px;
-  margin-bottom: 40px;
+.hotel__introduce__contact {
+  width: 80%;
+  margin: 40px auto;
 }
 
-.hotel__contact-container li {
+.hotel__introduce__contact-address {
   display: inline-block;
-  margin-right: 20%;
 }
 
-.hotel__contact-container li img {
-  width: 50px;
-  height: 50px;
+.hotel__introduce__contact-address::before {
+  display: inline-block;
+  content: '';
+  background-image: url(../public/icon/blackicon/location.png);
+  background-position: center;
+  background-size: cover;
+  width: 25px;
+  height: 25px;
+}
+
+.hotel__introduce__contact-phone {
+  display: inline-block;
+}
+
+.hotel__introduce__contact-phone::before {
+  display: inline-block;
+  margin-left: 50px;
+  content: '';
+  background-image: url(../public/icon/blackicon/phone.png);
+  background-position: center;
+  background-size: cover;
+  width: 25px;
+  height: 25px;
 }
 
 .hotel__feature {
