--- a/assets/sass/component/stay/_hotel.scss
+++ b/assets/sass/component/stay/_hotel.scss
@@ -11,19 +11,36 @@
 }
 &__introduce{
 	margin-top: $margin-base;
-}
-&__contact-container{
-
-	margin-top:$margin-large;
-	margin-bottom:$margin-large;
-	li{
+	&__contact{
+		width: 80%;
+		margin: $margin-large auto;
+		&-address{
 		display: inline-block;
-		margin-right: 20%;
-		img{
-			width: 50px;
-			height: 50px;
+			&::before{
+				display: inline-block;
+				content: '';
+				background-image: url(../public/icon/blackicon/location.png);
+				background-position: center;
+				background-size: cover;
+				width: $icon-small;
+				height: $icon-small;
+			}
 		}
-	}
+		&-phone{
+			display: inline-block;
+			&::before{
+				display: inline-block;
+				margin-left: $margin-big;
+				content: '';
+				background-image: url(../public/icon/blackicon/phone.png);
+				background-position: center;
+				background-size: cover;
+				width: $icon-small;
+				height: $icon-small;
+			}
+		}
+		}
+
 }
 &__feature{
 	@extend %flex-around;
