--- a/assets/sass/component/stay/_stay.scss
+++ b/assets/sass/component/stay/_stay.scss
@@ -1,30 +1,32 @@
-.stay__header{
+.stay{
 	background-image: url(../public/picture/header-cover/stay.png);
   @extend %background-img-position;
   width: 100%;
   height: 80vh;
   position: relative;
 	overflow: hidden;
-  img{
-    position: absolute;
-    width: $icon-large;
-    height: $icon-large;
-    left: 7.8125%;
-    bottom: -5%;
-    z-index: 10;
-  }
-	&__title{
+	&__container{
 		position: absolute;
-		bottom: -10%;
+		bottom: -5%;
     left: -5%;
     background-color: $color-white;
     width: 30.21%;
-    height: $navbar-height;
+    height: $header-title;;
     border-radius: $margin-large;
-		h2{
-      text-align: end;
-      padding: $margin-large $padding-base;
-      font-size:$font-title;
-		}
 	}
+  &__title{
+    text-align: end;
+    color:$color-accent-dark;
+		padding: $margin-large $padding-base;
+		font-size:$font-title;
+    &::before{
+      display: inline-block;
+      content: '';
+      width: $icon-base;
+      height: $icon-base;
+      background-image: url(../public/icon/shell-4.png);
+      background-position: center;
+      background-size: cover;
+    }
+  }
 }
