--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,7 @@ a {
 .main {
   width: 84.167%;
   margin: 10vh auto;
+  margin-bottom: 30vh;
 }
 
 .footer {
@@ -170,6 +171,22 @@ a {
   height: 300px;
   position: relative;
   color: #ffffff;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.footer::before {
+  position: absolute;
+  top: -198px;
+  left: 0;
+  background-image: url(../public/picture/footer-cover/wave.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 200px;
 }
 
 .footer__logo h3 {
@@ -555,6 +572,17 @@ a {
   position: absolute;
   top: -40px;
   font-size: 1.375rem;
+  margin-left: -25px;
+}
+
+.hotel__feature__items-title::before {
+  display: inline-block;
+  content: '';
+  width: 25px;
+  height: 25px;
+  background-image: url(../public/icon/megaphone.png);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .hotel__link {
