--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -5,6 +5,20 @@
 	height: $footer-height;
 	position: relative;
 	color:$color-white;
+	box-sizing: content-box;
+	&::before{
+		position: absolute;
+		top:-198px;
+		left: 0;
+		background-image: url(../public/picture/footer-cover/wave.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center;
+		content: '';
+		display: block;
+		width: 100%;
+		height: 200px;
+	}
 
 	&__logo{
 		h3{
