--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -24,3 +24,6 @@
 @import 'component/history/history';
 @import 'component/stay/stay';
 @import 'component/stay/hotel';
+@import 'component/attractions/attractions';
+@import 'component/attractions/tourist-spots';
+@import 'component/attractions/destinations';
