--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ table {
           align-items: center;
 }
 
-.home, .about-us, .stay {
+.home, .about-us, .stay, .attractions {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -630,5 +630,108 @@ a {
   text-align: end;
   margin: 40px 10%;
   color: #7C7C7C;
+}
+
+.attractions {
+  background-image: url(../public/picture/header-cover/attractions.png);
+  width: 100%;
+  height: 80vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.attractions__container {
+  position: absolute;
+  bottom: -5%;
+  left: -5%;
+  background-color: #ffffff;
+  width: 30.21%;
+  height: 150px;
+  border-radius: 40px;
+}
+
+.attractions__title {
+  text-align: end;
+  color: #123C62;
+  padding: 40px 20px;
+  font-size: 1.5rem;
+}
+
+.attractions__title::before {
+  display: inline-block;
+  content: '';
+  width: 50px;
+  height: 50px;
+  background-image: url(../public/icon/shell-5.png);
+  background-position: center;
+  background-size: cover;
+}
+
+.tourist-spots__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.tourist-spots__link > li {
+  width: 11.72%;
+  max-width: 11.72%;
+  background-color: #3DA3FF;
+  padding: 20px 40px;
+  margin-bottom: 40px;
+  text-align: center;
+  border-radius: 40px;
+}
+
+.tourist-spots__link > li a {
+  font-size: 1.25rem;
+  color: #ffffff;
+}
+
+.destinations {
+  margin-top: 15vh;
+}
+
+.destinations__items {
+  position: relative;
+  margin-bottom: 150px;
+}
+
+.destinations__items img {
+  width: 100%;
+  border-radius: 30px;
+}
+
+.destinations__items__introduce {
+  margin-top: 40px;
+  line-height: 1.4;
+  letter-spacing: 2px;
+}
+
+.destinations__items__title {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: -10%;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 6px 1px #7C7C7C;
+          box-shadow: 0px 0px 6px 1px #7C7C7C;
+  color: #123C62;
+  font-size: 1.25rem;
 }
 /*# sourceMappingURL=style.css.map */
