--- a/assets/sass/component/attractions/_destinations.scss
+++ b/assets/sass/component/attractions/_destinations.scss
@@ -11,6 +11,7 @@ margin-top: 15vh;
 		margin-top: 40px;
 		line-height: 1.4;
 		letter-spacing: 2px;
+		color:$color-accent-dark;
 	}
 	&__title{
 		position: absolute;
