--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ table {
 
 body {
   width: 100%;
-  max-width: 1920px;
+  max-width: 1280px;
   min-height: 100vh;
   margin: 0 auto;
   font-family: 'Noto Sans TC', sans-serif;
@@ -461,18 +461,17 @@ a {
 
 .about-us__container {
   position: absolute;
-  bottom: -5%;
-  left: -5%;
+  bottom: 0;
   background-color: #ffffff;
   width: 30.21%;
-  height: 150px;
-  border-radius: 40px;
+  height: 100px;
+  border-top-right-radius: 40px;
 }
 
 .about-us__title {
-  text-align: end;
+  text-align: center;
   color: #123C62;
-  padding: 40px 20px;
+  padding: 40px 0;
   font-size: 1.5rem;
 }
 
@@ -509,18 +508,17 @@ a {
 
 .stay__container {
   position: absolute;
-  bottom: -5%;
-  left: -5%;
+  bottom: 0;
   background-color: #ffffff;
   width: 30.21%;
-  height: 150px;
-  border-radius: 40px;
+  height: 100px;
+  border-top-right-radius: 40px;
 }
 
 .stay__title {
-  text-align: end;
+  text-align: center;
   color: #123C62;
-  padding: 40px 20px;
+  padding: 40px 0;
   font-size: 1.5rem;
 }
 
@@ -640,20 +638,28 @@ a {
   overflow: hidden;
 }
 
+.attractions img {
+  position: absolute;
+  width: 29.0625%;
+  -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
+  bottom: -10%;
+  right: -2%;
+}
+
 .attractions__container {
   position: absolute;
-  bottom: -5%;
-  left: -5%;
+  bottom: 0;
   background-color: #ffffff;
   width: 30.21%;
-  height: 150px;
-  border-radius: 40px;
+  height: 100px;
+  border-top-right-radius: 40px;
 }
 
 .attractions__title {
-  text-align: end;
+  text-align: center;
   color: #123C62;
-  padding: 40px 20px;
+  padding: 40px 0;
   font-size: 1.5rem;
 }
 
@@ -711,6 +717,7 @@ a {
   margin-top: 40px;
   line-height: 1.4;
   letter-spacing: 2px;
+  color: #123C62;
 }
 
 .destinations__items__title {
