--- a/assets/sass/mixin/_background.scss
+++ b/assets/sass/mixin/_background.scss
@@ -3,3 +3,13 @@
 	background-position: center;
 	background-size: cover;
 }
+
+%background-title-icon{
+	background-position: center;
+	background-size: cover;
+}
+
+%main-title-icon{
+		background-position: center;
+			background-repeat: no-repeat;
+}
