--- a/assets/sass/variable/_layout.scss
+++ b/assets/sass/variable/_layout.scss
@@ -1,7 +1,9 @@
 $margin-small:10px;
 $margin-base: 20px;
+$margin-base-large:25px;
 $margin-large: 40px;
 $margin-big: 50px;
+$margin-hue:150px;
 
 $padding-small: 10px;
 $padding-base: 20px;
@@ -10,6 +12,10 @@ $padding-large: 40px;
 $navbar-height:100px;
 $header-title:100px;
 $footer-height:300px;
+$footer-background:200px;
+$main-section-height:250px;
+$sub-title-area:150px;
+
 
 $icon-base:50px;
 $icon-small-base:30px;
@@ -18,6 +24,7 @@ $icon-large: 130px;
 
 $logo:100px;
 
+$border-radius-small:30px;
 $border-radius-base:40px;
 $border-radius-large:50px;
 $border-radius-circle:50%;
