--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ table {
   border-spacing: 0;
 }
 
-.home, .event button, .map {
+.home, .event button, .map, .destinations__items__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -88,18 +88,67 @@ table {
           align-items: center;
 }
 
-.home, .about-us, .stay, .attractions {
+.navbar__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tourist-spots__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer::before, .home, .about-us, .stay, .attractions {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-body {
-  width: 100%;
+.about-us__title::before, .stay__title::before, .hotel__introduce__contact-address::before, .hotel__introduce__contact-phone::before, .attractions__title::before {
+  background-position: center;
+  background-size: cover;
+}
+
+.hotel__feature__items-title::before {
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.main {
+  width: 84.167%;
   max-width: 1280px;
-  min-height: 100vh;
+  margin: 10vh auto;
+}
+
+.navbar {
+  height: 100px;
+  width: 84.167%;
   margin: 0 auto;
+}
+
+.header {
+  width: 100%;
+  height: 80vh;
+}
+
+body {
+  min-height: 100vh;
   font-family: 'Noto Sans TC', sans-serif;
+  line-height: 1.4;
+  letter-spacing: 2px;
 }
 
 a {
@@ -107,9 +156,6 @@ a {
 }
 
 .navbar {
-  height: 100px;
-  width: 84.167%;
-  margin: 0 auto;
   font-size: 1.125rem;
 }
 
@@ -126,15 +172,6 @@ a {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   height: 100px;
 }
 
@@ -154,13 +191,13 @@ a {
   position: absolute;
   left: 0;
   z-index: 10;
-  background-color: white;
+  background-color: #ffffff;
   visibility: hidden;
 }
 
 .navbar__link-sub li {
   padding: 20px 0 20px 0;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid #3DA3FF;
 }
 
 .navbar__link-sub li a {
@@ -194,15 +231,8 @@ a {
   width: 25px;
 }
 
-.header {
-  width: 100%;
-  height: 80vh;
-}
-
 .main {
-  width: 84.167%;
-  margin: 10vh auto;
-  margin-bottom: 30vh;
+  margin-bottom: 25vh;
 }
 
 .footer {
@@ -220,9 +250,6 @@ a {
   top: -198px;
   left: 0;
   background-image: url(../public/picture/footer-cover/wave.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   content: '';
   display: block;
   width: 100%;
@@ -298,8 +325,8 @@ a {
 }
 
 .home {
-  width: 100%;
-  height: 80vh;
+  width: inherit;
+  height: inherit;
   background-image: url(../public/picture/header-cover/home.png);
   color: #ffffff;
 }
@@ -456,7 +483,6 @@ a {
   width: 100%;
   height: 80vh;
   position: relative;
-  overflow: hidden;
 }
 
 .about-us__container {
@@ -481,12 +507,9 @@ a {
   width: 50px;
   height: 50px;
   background-image: url(../public/icon/shell-3.png);
-  background-position: center;
-  background-size: cover;
 }
 
 .history__items {
-  line-height: 1.4;
   margin-bottom: 20px;
   color: #123C62;
 }
@@ -503,7 +526,6 @@ a {
   width: 100%;
   height: 80vh;
   position: relative;
-  overflow: hidden;
 }
 
 .stay__container {
@@ -528,8 +550,6 @@ a {
   width: 50px;
   height: 50px;
   background-image: url(../public/icon/shell-4.png);
-  background-position: center;
-  background-size: cover;
 }
 
 .hotel {
@@ -539,7 +559,7 @@ a {
 
 .hotel__image {
   width: 100%;
-  border-radius: 20px;
+  border-radius: 40px;
 }
 
 .hotel__title {
@@ -564,8 +584,6 @@ a {
   display: inline-block;
   content: '';
   background-image: url(../public/icon/blackicon/location.png);
-  background-position: center;
-  background-size: cover;
   width: 25px;
   height: 25px;
 }
@@ -579,8 +597,6 @@ a {
   margin-left: 50px;
   content: '';
   background-image: url(../public/icon/blackicon/phone.png);
-  background-position: center;
-  background-size: cover;
   width: 25px;
   height: 25px;
 }
@@ -619,8 +635,6 @@ a {
   width: 25px;
   height: 25px;
   background-image: url(../public/icon/megaphone.png);
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .hotel__link {
@@ -635,7 +649,6 @@ a {
   width: 100%;
   height: 80vh;
   position: relative;
-  overflow: hidden;
 }
 
 .attractions img {
@@ -643,8 +656,8 @@ a {
   width: 29.0625%;
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
-  bottom: -10%;
-  right: -2%;
+  bottom: -30%;
+  right: -5%;
 }
 
 .attractions__container {
@@ -669,19 +682,6 @@ a {
   width: 50px;
   height: 50px;
   background-image: url(../public/icon/shell-5.png);
-  background-position: center;
-  background-size: cover;
-}
-
-.tourist-spots__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .tourist-spots__link > li {
@@ -714,23 +714,13 @@ a {
 }
 
 .destinations__items__introduce {
-  margin-top: 40px;
-  line-height: 1.4;
-  letter-spacing: 2px;
+  margin-top: 30px;
   color: #123C62;
 }
 
 .destinations__items__title {
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  text-align: center;
   top: -10%;
   width: 150px;
   height: 150px;
