--- a/assets/sass/component/attractions/_destinations.scss
+++ b/assets/sass/component/attractions/_destinations.scss
@@ -1,26 +1,27 @@
 .destinations{
 margin-top: 15vh;
+
 &__items{
 	position: relative;
-	margin-bottom: 150px;
+	margin-bottom: $margin-hue;
+
 	img{
 		width: 100%;
-		border-radius: 30px;
+		border-radius: $border-radius-small;
 	}
+
 	&__introduce{
-		margin-top: 40px;
-		line-height: 1.4;
-		letter-spacing: 2px;
+		margin-top: $border-radius-small;
 		color:$color-accent-dark;
 	}
+
 	&__title{
 		position: absolute;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		@extend %flex-center;
+		text-align: center;
 		top:-10%;
-		width:150px ;
-		height: 150px;
+		width:$sub-title-area;
+		height: $sub-title-area;
 		border-radius: 50%;
 		background-color: white;
 		box-shadow: 0px 0px 6px 1px $color-gray;
