--- a/assets/sass/component/attractions/_tourist-spots.scss
+++ b/assets/sass/component/attractions/_tourist-spots.scss
@@ -1,16 +1,16 @@
 .tourist-spots{
 	&__link{
-		display: flex;
-		justify-content: space-between;
-		flex-wrap: wrap;
+		@extend %flex-space-between-wrap;
+
 		>li{
 			width: 11.72%;
 			max-width: 11.72%;
 			background-color: $color-accent;
-			padding: 20px 40px;
-			margin-bottom: 40px;
+			padding: $padding-base $padding-large;
+			margin-bottom: $margin-large;
 			text-align: center;
-			border-radius: 40px;
+			border-radius: $border-radius-base;
+
 			a{
 				font-size: $font-link;
 				color:$color-white;
