--- a/assets/sass/component/stay/_stay.scss
+++ b/assets/sass/component/stay/_stay.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 80vh;
   position: relative;
-	overflow: hidden;
+
 	&__container{
 		position: absolute;
 		bottom: 0;
@@ -13,19 +13,20 @@
     height: $header-title;
     border-top-right-radius: $margin-large;
 	}
+
   &__title{
     text-align: center;
     color:$color-accent-dark;
 		padding: $margin-large 0;
 		font-size:$font-title;
+
     &::before{
       display: inline-block;
       content: '';
       width: $icon-base;
       height: $icon-base;
       background-image: url(../public/icon/shell-4.png);
-      background-position: center;
-      background-size: cover;
+      @extend %background-title-icon;
     }
   }
 }
