--- a/assets/sass/layout/_body.scss
+++ b/assets/sass/layout/_body.scss
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
 body{
-	width: 100%;
-	max-width: 1280px;
 	min-height: 100vh;
-	margin: 0 auto;
 	font-family: 'Noto Sans TC', sans-serif;
+	line-height: 1.4;
+	letter-spacing: 2px;
 }
 
 a{
