--- a/assets/sass/component/stay/_stay.scss
+++ b/assets/sass/component/stay/_stay.scss
@@ -6,6 +6,7 @@
   position: relative;
 
 	&__container{
+    @extend %flex-center;
 		position: absolute;
 		bottom: 0;
     background-color: $color-white;
@@ -17,11 +18,14 @@
   &__title{
     text-align: center;
     color:$color-accent-dark;
-		padding: $margin-large 0;
 		font-size:$font-title;
+    position: relative;
 
     &::before{
-      display: inline-block;
+      position: absolute;
+      display: block;
+      bottom:-10px;
+      left: -100px;
       content: '';
       width: $icon-base;
       height: $icon-base;
