--- a/assets/sass/variable/_layout.scss
+++ b/assets/sass/variable/_layout.scss
@@ -8,6 +8,7 @@ $margin-hue:150px;
 $padding-small: 10px;
 $padding-base: 20px;
 $padding-large: 40px;
+$padding-big: 50px;
 
 $navbar-height:100px;
 $header-title:100px;
@@ -17,7 +18,7 @@ $main-section-height:250px;
 $sub-title-area:150px;
 
 
-$icon-base:80px;
+$icon-base:70px;
 $icon-small-base:30px;
 $icon-small:25px;
 $icon-large: 130px;
