--- a/assets/sass/mixin/_flex-box.scss
+++ b/assets/sass/mixin/_flex-box.scss
@@ -32,3 +32,9 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
+
+%flex-center-end{
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+}
