--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -19,17 +19,15 @@
 
 // component
 // homepage
-@import 'component/home/home';
 @import 'component/home/event';
 @import 'component/home/map';
 @import 'component/home/news';
 // about us
-@import 'component/history/about';
 @import 'component/history/history';
 // stay
-@import 'component/stay/stay';
 @import 'component/stay/hotel';
 // attractions
-@import 'component/attractions/attractions';
 @import 'component/attractions/tourist-spots';
 @import 'component/attractions/destinations';
+// news
+@import 'component/news/info';
