--- a/assets/sass/variable/_color.scss
+++ b/assets/sass/variable/_color.scss
@@ -4,6 +4,8 @@ $color-black:#000000;
 $color-accent: #3DA3FF;
 $color-accent-dark:#123C62;
 $color-accent-light:#FFB72A;
+$color-accent-blue:#8FC7F9;
+$color-underline:#B8DDFF;
 
 $color-gray:#7C7C7C;
 $color-button-gray:#BEBEBE;
