--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ table {
   border-spacing: 0;
 }
 
-.home, .event button, .map, .destinations__items__title {
+.header__home, .event button, .map, .destinations__items__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,7 +111,7 @@ table {
       flex-wrap: wrap;
 }
 
-.about-us__container, .stay__container, .attractions__container {
+.header__about-us__container, .header__stay__container, .header__attractions__container, .header__news__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -123,13 +123,13 @@ table {
           align-items: flex-end;
 }
 
-.footer::before, .home, .about-us, .stay, .attractions {
+.header__home, .header__about-us, .header__stay, .header__attractions, .header__news, .footer::before {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-.about-us__title::before, .stay__title::before, .hotel__introduce__contact-address::before, .hotel__introduce__contact-phone::before, .attractions__title::before {
+.hotel__introduce__contact-address::before, .hotel__introduce__contact-phone::before {
   background-position: center;
   background-size: cover;
 }
@@ -139,21 +139,42 @@ table {
   background-repeat: no-repeat;
 }
 
-.main {
-  width: 84.167%;
+main {
+  width: 78.125%;
   max-width: 1280px;
   margin: 10vh auto;
 }
 
 .navbar {
   height: 100px;
-  width: 84.167%;
+  width: 78.125%;
   margin: 0 auto;
 }
 
-.header {
+header {
   width: 100%;
   height: 80vh;
+}
+
+.header__about-us__container, .header__stay__container, .header__attractions__container, .header__news__container {
+  position: absolute;
+  bottom: 0;
+  background-color: #ffffff;
+  width: 30.21%;
+  height: 100px;
+  border-top-right-radius: 70px;
+}
+
+.header__about-us__container__title, .header__stay__container__title, .header__attractions__container__title, .header__news__container__title {
+  color: #123C62;
+  font-size: 1.5rem;
+  padding-bottom: 10px;
+  padding-left: 30px;
+}
+
+.header__about-us__container img, .header__stay__container img, .header__attractions__container img, .header__news__container img {
+  width: 70px;
+  height: 70px;
 }
 
 body {
@@ -188,6 +209,11 @@ a {
 
 .navbar__link li {
   position: relative;
+  overflow: hidden;
+}
+
+.navbar__link li:hover {
+  overflow: visible;
 }
 
 .navbar__link a {
@@ -196,30 +222,25 @@ a {
 }
 
 .navbar__link-sub {
-  width: 100%;
   position: absolute;
-  margin-top: 37px;
-  z-index: 10;
+  width: 100%;
   background-color: #ffffff;
-  display: none;
-}
-
-.navbar__link-sub.active {
-  display: block;
+  padding-top: 37.405px;
+  z-index: 10;
 }
 
 .navbar__link-sub li {
   text-align: center;
-  padding: 20px 0 20px 0;
   border-bottom: 1px solid #3DA3FF;
+  padding: 20px 0;
+}
+
+.navbar__link-sub li:last-child {
+  border: none;
 }
 
 .navbar__link-sub li a {
   padding-left: 0;
-}
-
-.navbar__link-sub li:nth-last-child(1) {
-  border: none;
 }
 
 .navbar__outside-link {
@@ -237,7 +258,50 @@ a {
   width: 25px;
 }
 
-.main {
+.header__home {
+  background-image: url(../public/picture/header-cover/home.png);
+  color: #ffffff;
+}
+
+.header__home__title {
+  font-size: 3.125rem;
+}
+
+.header__about-us {
+  background-image: url(../public/picture/header-cover/about.png);
+  position: relative;
+}
+
+.header__stay {
+  background-image: url(../public/picture/header-cover/stay.png);
+  position: relative;
+}
+
+.header__attractions {
+  background-image: url(../public/picture/header-cover/attractions.png);
+  position: relative;
+}
+
+.header__attractions__animal {
+  position: absolute;
+  width: 29.0625%;
+  -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
+  bottom: -10%;
+  right: -5%;
+}
+
+.header__news {
+  background-image: url(../public/picture/header-cover/news.png);
+  position: relative;
+}
+
+.header__news__container img {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+main {
   margin-bottom: 30vh;
 }
 
@@ -328,17 +392,6 @@ a {
   position: absolute;
   bottom: 0;
   color: #ffffff;
-}
-
-.home {
-  width: inherit;
-  height: inherit;
-  background-image: url(../public/picture/header-cover/home.png);
-  color: #ffffff;
-}
-
-.home__title {
-  font-size: 3.125rem;
 }
 
 .event {
@@ -484,42 +537,6 @@ a {
   color: #123C62;
 }
 
-.about-us {
-  background-image: url(../public/picture/header-cover/about.png);
-  width: 100%;
-  height: 80vh;
-  position: relative;
-}
-
-.about-us__container {
-  position: absolute;
-  bottom: 0;
-  background-color: #ffffff;
-  width: 30.21%;
-  height: 100px;
-  border-top-right-radius: 40px;
-}
-
-.about-us__title {
-  text-align: center;
-  color: #123C62;
-  font-size: 1.5rem;
-  padding-bottom: 10px;
-  padding-left: 50px;
-  position: relative;
-}
-
-.about-us__title::before {
-  position: absolute;
-  display: inline-block;
-  bottom: 0;
-  left: -40px;
-  content: '';
-  width: 70px;
-  height: 70px;
-  background-image: url(../public/icon/shell-3.png);
-}
-
 .history__items {
   margin-bottom: 20px;
   color: #123C62;
@@ -530,42 +547,6 @@ a {
   margin-left: 58%;
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
-}
-
-.stay {
-  background-image: url(../public/picture/header-cover/stay.png);
-  width: 100%;
-  height: 80vh;
-  position: relative;
-}
-
-.stay__container {
-  position: absolute;
-  bottom: 0;
-  background-color: #ffffff;
-  width: 30.21%;
-  height: 100px;
-  border-top-right-radius: 40px;
-}
-
-.stay__title {
-  text-align: center;
-  color: #123C62;
-  font-size: 1.5rem;
-  padding-bottom: 10px;
-  padding-left: 50px;
-  position: relative;
-}
-
-.stay__title::before {
-  position: absolute;
-  display: inline-block;
-  bottom: 0;
-  left: -40px;
-  content: '';
-  width: 70px;
-  height: 70px;
-  background-image: url(../public/icon/shell-4.png);
 }
 
 .hotel {
@@ -660,51 +641,6 @@ a {
   color: #7C7C7C;
 }
 
-.attractions {
-  background-image: url(../public/picture/header-cover/attractions.png);
-  width: 100%;
-  height: 80vh;
-  position: relative;
-}
-
-.attractions img {
-  position: absolute;
-  width: 29.0625%;
-  -webkit-transform: scaleX(-1);
-          transform: scaleX(-1);
-  bottom: -10%;
-  right: -5%;
-}
-
-.attractions__container {
-  position: absolute;
-  bottom: 0;
-  background-color: #ffffff;
-  width: 30.21%;
-  height: 100px;
-  border-top-right-radius: 40px;
-}
-
-.attractions__title {
-  text-align: center;
-  color: #123C62;
-  font-size: 1.5rem;
-  padding-bottom: 10px;
-  padding-left: 50px;
-  position: relative;
-}
-
-.attractions__title::before {
-  position: absolute;
-  display: inline-block;
-  bottom: 0;
-  left: -40px;
-  content: '';
-  width: 70px;
-  height: 70px;
-  background-image: url(../public/icon/shell-5.png);
-}
-
 .tourist-spots__link > li {
   width: 11.72%;
   max-width: 11.72%;
@@ -751,5 +687,84 @@ a {
           box-shadow: 0px 0px 6px 1px #7C7C7C;
   color: #123C62;
   font-size: 1.25rem;
+}
+
+.info {
+  margin-bottom: 30px;
+  border-bottom: 1px solid #B8DDFF;
+  color: #123C62;
+  overflow: hidden;
+}
+
+.info__date {
+  padding-bottom: 20px;
+}
+
+.info__title {
+  padding-bottom: 50px;
+  padding-top: 20px;
+  position: relative;
+  cursor: pointer;
+}
+
+.info__title__button {
+  position: absolute;
+  top: 20px;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #8FC7F9;
+  cursor: pointer;
+}
+
+.info__title__button::before, .info__title__button::after {
+  position: absolute;
+  content: '';
+  width: 13px;
+  height: 2px;
+  top: 0;
+  bottom: 0;
+  left: 8px;
+  right: 0;
+  margin: auto;
+  background-color: #ffffff;
+  border-radius: 1px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.info__title__button::after {
+  left: -8px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.info__container {
+  background-color: #B8DDFF;
+  height: 0px;
+  -webkit-transition: height 650ms cubic-bezier(0.86, 0, 0.07, 1);
+  transition: height 650ms cubic-bezier(0.86, 0, 0.07, 1);
+  will-change: height;
+}
+
+.info__container.active {
+  height: 750px;
+  overflow: scroll;
+}
+
+.info__container div {
+  width: 94.01%;
+  margin: 0 auto;
+  padding: 30px 0 30px 0;
+}
+
+.info__container img {
+  width: 100%;
+}
+
+.info__container p {
+  padding-top: 20px;
+  text-align: justify;
 }
 /*# sourceMappingURL=style.css.map */
