--- a/assets/sass/mixin/_layout.scss
+++ b/assets/sass/mixin/_layout.scss
@@ -1,15 +1,37 @@
 %layout-main{
-	width: 84.167%;
+	width: 78.125%;
 	max-width: 1280px;
 	margin: 10vh auto;
 }
 
 %layout-navbar{
 	height: $navbar-height;
-	width: 84.167%;
+	width: 78.125%;
 	margin: 0 auto;
 }
 %layout-header{
 	width: 100%;
   height: 80vh;
+}
+
+%layout-header-section{
+	@extend %flex-center-end;
+	position: absolute;
+	bottom: 0;
+	background-color: $color-white;
+	width: 30.21%;
+	height: $header-title;
+	border-top-right-radius: 70px;
+}
+
+%layout-header-title{
+	color:$color-accent-dark;
+	font-size:$font-title;
+	padding-bottom: $padding-small;
+	padding-left: 30px;
+}
+
+%layout-header-icon{
+	width: 70px ;
+  height: 70px;
 }
